add mote tests to image-service